design: add gaps and fix double lined width

--- a/src/Resources/styles/front/common/helpers/main.less
+++ b/src/Resources/styles/front/common/helpers/main.less
@@ -104,6 +104,7 @@
 }
 
 .double-lined {
+    display: inline-block;
     position: relative;
 
     &:before {
